mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/abiEncoder/conflicting_settings.sol
pragma abicoder               v2;
pragma abicoder v1;
// ----
// SyntaxError 3845: (34-53): ABI coder has already been selected for this source unit.
// Warning 9511: (34-53): ABI coder v1 is deprecated and scheduled for removal. Use ABI coder v2 instead.
